tests/ui/resolve/import_glob_conflicts.stderr
error: identifier `MyUdvt` already declared
  --> ROOT/tests/ui/resolve/import_glob_conflicts.sol:LL:CC
   |
LL | import "./auxiliary/udvt.sol";
   | ------------------------------ note: previous declaration imported here
LL | import "./auxiliary/udvt2.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: ROOT/tests/ui/resolve/auxiliary/udvt.sol:LL:CC
   |
LL | type MyUdvt is uint256;
   | ----------------------- note: previous declaration declared here
   |

error: aborting due to 1 previous error

