tests/ui/resolve/import_glob_conflicts.sol
import "./auxiliary/udvt.sol";
import "./auxiliary/udvt2.sol"; //~ ERROR: already declared
